dx/force-app/main/default/objects/ltng_M2M_Contact__c/ltng_M2M_Contact__c.object-meta.xml
<CustomObject>
    <description>Example Contact object for the Many to Many relationship demo.
In this example, an Account can have many Contacts - just as Contacts can have relationships in many Accounts.
(John Doe is an influencer at XYZ corp, but a gatekeeper at ABC inc.)</description>
    <label>M2M Contact</label>
    <nameField>
        <label>M2M Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>M2M Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>