dx/force-app/main/default/objects/ltng_M2M_Contact__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The primary Account for this contact</inlineHelpText>
    <label>Primary M2M Account</label>
    <referenceTo>ltng_M2M_Account__c</referenceTo>
    <relationshipLabel>M2M Contacts</relationshipLabel>
    <relationshipName>M2M_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>