dx/force-app/main/default/objects/ltng_M2M_Contact__c/fields/AssistantName__c.field-meta.xml
<CustomField>
    <fullName>AssistantName__c</fullName>
    <inlineHelpText>The assistant’s name.</inlineHelpText>
    <label>Assistant Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>