dx/force-app/main/default/objects/ltng_M2M_Contact__c/fields/AssistantPhone__c.field-meta.xml
<CustomField>
    <fullName>AssistantPhone__c</fullName>
    <inlineHelpText>The assistant’s telephone number.</inlineHelpText>
    <label>Assistant Phone</label>
    <type>Phone</type>
</CustomField>