dx/force-app/main/default/objects/ltng_M2M_Contact__c/fields/Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Birthdate__c</fullName>
    <inlineHelpText>The contact’s birthdate</inlineHelpText>
    <label>Birthdate</label>
    <type>Date</type>
</CustomField>