dx/force-app/main/default/objects/ltng_M2M_Contact__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <inlineHelpText>The contact&#39;s department.</inlineHelpText>
    <label>Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>