dx/force-app/main/default/objects/ltng_M2M_Contact__c/fields/DoNotCall__c.field-meta.xml
<CustomField>
    <fullName>DoNotCall__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates that the contact does not want to receive calls.</inlineHelpText>
    <label>Do Not Call</label>
    <type>Checkbox</type>
</CustomField>