dx/force-app/main/default/objects/ltng_M2M_Contact__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <inlineHelpText>The contact’s email address.</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>