dx/force-app/main/default/objects/ltng_M2M_Contact__c/fields/Fax__c.field-meta.xml
<CustomField>
    <fullName>Fax__c</fullName>
    <inlineHelpText>The contact’s fax number.</inlineHelpText>
    <label>Business Fax</label>
    <type>Phone</type>
</CustomField>