dx/force-app/main/default/objects/ltng_M2M_Contact__c/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <inlineHelpText>The contact’s first name up to 40 characters.</inlineHelpText>
    <label>First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>