dx/force-app/main/default/objects/ltng_M2M_Contact__c/fields/HasOptedOutOfEmail__c.field-meta.xml
<CustomField>
    <fullName>HasOptedOutOfEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates whether the contact doesn’t want to receive email from Salesforce (true) or does (false).</inlineHelpText>
    <label>Email Opt Out</label>
    <type>Checkbox</type>
</CustomField>