dx/force-app/main/default/objects/ltng_M2M_Contact__c/fields/HasOptedOutOfFax__c.field-meta.xml
<CustomField>
    <fullName>HasOptedOutOfFax__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates whether the contact prohibits receiving faxes.</inlineHelpText>
    <label>Fax Opt Out</label>
    <type>Checkbox</type>
</CustomField>