dx/force-app/main/default/objects/ltng_M2M_Contact__c/fields/HomePhone__c.field-meta.xml
<CustomField>
    <fullName>HomePhone__c</fullName>
    <inlineHelpText>The contact’s home telephone number.</inlineHelpText>
    <label>Home Phone</label>
    <type>Phone</type>
</CustomField>