dx/force-app/main/default/objects/ltng_M2M_Contact__c/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <inlineHelpText>Last name of the contact up to 80 characters.</inlineHelpText>
    <label>Last Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>