dx/force-app/main/default/objects/ltng_M2M_Contact__c/fields/MailingAddress__c.field-meta.xml
<CustomField>
    <fullName>MailingAddress__c</fullName>
    <label>Mailing Address</label>
    <type>TextArea</type>
</CustomField>