dx/force-app/main/default/objects/ltng_M2M_Contact__c/fields/MiddleName__c.field-meta.xml
<CustomField>
    <fullName>MiddleName__c</fullName>
    <inlineHelpText>The contact’s middle name up to 40 characters.</inlineHelpText>
    <label>Middle Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>