dx/force-app/main/default/objects/ltng_M2M_Contact__c/fields/OtherAddress__c.field-meta.xml
<CustomField>
    <fullName>OtherAddress__c</fullName>
    <label>Other Address</label>
    <type>TextArea</type>
</CustomField>