dx/force-app/main/default/objects/ltng_M2M_Contact__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <inlineHelpText>Telephone number for the contact.</inlineHelpText>
    <label>Business Phone</label>
    <type>Phone</type>
</CustomField>