dx/force-app/main/default/objects/ltng_M2M_Contact__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <inlineHelpText>Title of the contact, such as CEO or Vice President.</inlineHelpText>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>