dx/force-app/main/default/objects/ltng_M2M_Contact__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AccountId__c</columns>
    <columns>Title__c</columns>
    <columns>Department__c</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>